replace pk for folder apps/frappe/frappe/www

--- a/frappe/www/printpreview.html
+++ b/frappe/www/printpreview.html
@@ -6,5 +6,5 @@ no_cache: 1
 {{
     frappe
         .get_doc('Print Format', frappe.form_dict.print_format)
-        .get_html(frappe.form_dict.name, frappe.form_dict.letterhead)
+        .get_html(frappe.form_dict.id, frappe.form_dict.letterhead)
 }}
