--- a/frappe/www/app.html
+++ b/frappe/www/app.html
@@ -73,7 +73,7 @@
 	{% include "templates/includes/app_analytics/google_analytics.html" %}
 
 		{% for sound in (sounds or []) %}
-		<audio preload="auto" id="sound-{{ sound.name }}" volume={{ sound.volume or 1 }}>
+		<audio preload="auto" id="sound-{{ sound.id }}" volume={{ sound.volume or 1 }}>
 			<source src="{{ sound.src }}"></source>
 		</audio>
 		{% endfor %}
