--- a/frappe/www/login.html
+++ b/frappe/www/login.html
@@ -90,11 +90,11 @@
 							{% for provider in provider_logins %}
 							<div class="login-button-wrapper">
 								<a href="{{ provider.auth_url }}"
-									class="btn btn-block btn-default btn-sm btn-login-option btn-{{ provider.name }}">
+									class="btn btn-block btn-default btn-sm btn-login-option btn-{{ provider.id }}">
 									{% if provider.icon %}
 										{{ provider.icon }}
 									{% endif %}
-									{{ _("Login with {0}").format(provider.provider_name) }}</a>
+									{{ _("Login with {0}").format(provider.provider_id) }}</a>
 							</div>
 							{% endfor %}
 						</div>
