--- a/frappe/www/me.html
+++ b/frappe/www/me.html
@@ -10,7 +10,7 @@
 	<div class="col d-flex justify-content-between align-items-center">
 		<div>
 			<span class="my-account-avatar">
-				{{avatar(current_user.name)}}
+				{{avatar(current_user.id)}}
 			</span>
 			<span class="my-account-name ml-4">
 				{{current_user.full_name }}
