--- a/frappe/www/me.html
+++ b/frappe/www/me.html
@@ -20,7 +20,7 @@
 		<div class="title">{{_("Settings")}}</div>
 		<div>
 			<span class="my-account-avatar">
-				{{avatar(current_user.name)}}
+				{{avatar(current_user.id)}}
 			</span>
 			<span class="my-account-name ml-2">
 				{{current_user.full_name }}
