--- a/frappe/www/apps.html
+++ b/frappe/www/apps.html
@@ -12,10 +12,10 @@ endblock -%} {%- block footer -%} {%- endblock -%} {% block content %}
 		<div class="apps" style="grid-template-columns: repeat({{ appsCount }}, 1fr);">
 			{% for app in apps %}
 			<a class="app-icon" style="cursor: pointer;">
-				<div class="app-logo app-name-cls" app-name="{{ app.name }}" app-route="{{ app.route }}">
+				<div class="app-logo app-name-cls" app-name="{{ app.id }}" app-route="{{ app.route }}">
 					<img src="{{ app.logo }}" />
 					<div
-						app-name="{{ app.name }}"
+						app-name="{{ app.id }}"
 						class="set-default btn btn-sm {{ '' if app.is_default else 'hidden'}}"
 						title="Set as default"
 					>
